fix: horizontal scrollbars when vertical height too big

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300');
 body {
-  height: 100vh;
-  width: 100vw;
+  min-height: 100%;
+  width: 100%;
   // font-family: 'Open Sans Condensed', sans-serif;
   font-family: 'Open Sans', sans-serif;
   background: #5D5656;
